# synthv1-universal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
plugin/: CMakeLists.txt  DistrhoPluginInfo.h  config_dpf.h.cmake  synthv1_dpf.cpp  synthv1_dpf.h  synthv1_dpfui.cpp  synthv1_dpfui.h  synthv1_param.cpp  synthv1_param.h  synthv1widget_dpf.cpp  synthv1widget_dpf.h
